# xbox_soarm_teleop

./: .gitignore  CLAUDE.md  README.md  manualtest_xbox.sh  pyproject.toml
assets/: so101_abs.urdf  so101_with_cameras.xml
configs/: soarm_cartesian_processor.json
docs/: CALIBRATION.md  audit_plan.md  dataset_schema.md  driving_guide.md  dual_joycon_test_guide.md  lerobot_pipeline.md  mode_verification_guide.md  operator_checklist.md
examples/: README.md  analyze_joint_diag.py  compare_direct_vs_ik.py  debug_controller.py  diagnose_motors.py  diagnose_robot.py  diagnose_wrist_flex.py  go_home.py  ik_smoke_test.py  interactive_servo_test.py  joint_rom_test.py  lerobot_record_cartesian.py  power_cycle_test.py  probe_controller.py  read_servo_positions.py  record_xbox.py  simulate.py  simulate_mujoco.py  teleoperate.py  teleoperate_dual.py  teleoperate_real.py  test_base_rotation.py  test_controller_evdev.py  test_controller_pygame.py  test_jacobian_control.py  xbox_joint_diagnostic.py
examples/archive/: README.md  compare_direct_vs_ik.py  diagnose_wrist_flex.py  (+5 more)
scripts/: 70-joycon.rules  joycon_axis_info.py  setup_joycon.sh  test_joycon.py
tests/: __init__.py  conftest.py  test_axis_mapping.py  test_benchmark.py  test_cartesian_control.py  test_cli_entrypoints.py  test_control_modes.py  test_dataset_features.py  test_ik_roundtrip.py  test_ik_smoke.py  test_ik_wrist_limits.py  test_jacobian.py  test_joint_diag_analysis.py  test_joint_rom.py  test_joycon_input.py  test_keyboard_input.py  test_lerobot_cartesian_ik.py  test_rom_calibration.py  test_runtime_session.py  test_servo_functionality.py  test_workspace_limits.py  test_xbox_input.py  test_xbox_joint_drive.py  test_xbox_teleop.py
(+62 files in other folders)
